crates/kwokka-macros/tests/ui/synchronous.stderr
error: #[kwokka::main] wraps an async fn; mark the entry point async
 --> tests/ui/synchronous.rs:2:1
  |
2 | fn main() {}
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/synchronous.rs:2:13
  |
2 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/ui/synchronous.rs`
