crates/kwokka-macros/tests/ui/synchronous.rs
#[kwokka::main(affine)]
fn main() {}
